src/styles/style.css
/** CSS STYLE **/

:root {
    --white: #fff;
    --semitransparent-white: #d7ccc0;
    --light: #f5f4f0;
    --primary: #fe8a02;
    --primary-dark: #42413c;
    --dark: #2a2626;
    --semitransparent-dark: #908d8b;
    --brown: #b09a81;
    --blue: #1085c5;
}

.section {
    width: 1440px;
    border: 1px dotted;
    margin: auto;
    margin-bottom: 100px;
}

h1 {
    font-family: 'Neucha';
    line-height: 1.2em;
    font-size: 72px;
}

h2 {
    font-family: 'Neucha';
    line-height: 1.2em;
    font-size: 60px;
}

h3 {
    font-family: 'Neucha';
    line-height: 1.2em;
    font-size: 34px;
}

p {
    font-family: 'Open Sans';
    line-height: 1.6em;
    font-size: 16px;
    color: #2A2626;
}

.header {
    height: 914px;
    position: relative;
}

.header::before {
    content: "";
    background-image: url(../../assets/images/background.png);
    opacity: 0.1;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    position: absolute;
    z-index: -1;
    background-repeat: no-repeat;
    background-size: cover;
    background-color: var(--brown);
  }

  .main-title {
      position: absolute;
      left: 135px;
      top: 100px;
      color: var(--primary);
      margin: 0;
      margin-top: 5px;
  }

  .dark-title {
    font-family: 'Neucha';
    line-height: 1.2em;
    font-size: 72px;
    color: var(--dark);
}

.header-image {
    position: relative;
    height: 525px;
    top: 55px;
    left: 461px;
}

.text-description {
    display: flex;
    position: absolute;
    left: 135px;
    top: 573px;
}

.text-desription-block {
    width: 540px;
}

.header-button {
    position: absolute;
    left: 675px;
    top: 805px;
    width: 148px;
    height: 49px;
    color: var(--white);
    font-size: 16px;
    font-weight: 700;
    background: var(--primary);
    border: 0;
}

.header-button:hover {
    color: var(--semitransparent-white);
    background: var(--primary-dark);
}

